agv_ws/log/build_2024-05-03_14-44-08/movement/stderr.log
  File "/home/vboxuser/agv_ws/install/movement/lib/python3.10/site-packages/movement/wheel_controller_server.py", line 59
    self.get_logger().info("Remaining Angle: " + str(remaining_angle)
                          ^
SyntaxError: '(' was never closed

